--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         });
 
         document.getElementById("btn2").addEventListener("click", function() {
-            alert("Awwww moi aussi jtm ;)!");
+            alert("Let's goooo! On commence quand ?;)");
         });
     </script>
 
