--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             position: absolute;
             top: 0;
             width: 100%;
-            background-color: white;
+            background-color: #fde9e0;
         }
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: white;
+            background-color: #fde9e0;
         }
         .button-container {
             display: flex;
