--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
 
         document.getElementById("btn1").addEventListener("click", function() {
-            makeBigger("btn2");
+            makeBigger(btn2);
         });
 
         document.getElementById("btn2").addEventListener("click", function() {
