--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .btn {
             padding: 10px 20px;
             font-size: 16px;
-            border: none;
+            border: 10px;
             cursor: pointer;
             transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
         }
